upload source code

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="music-player">
             <div class="top">
                 <i class="fa-solid fa-chevron-down"></i>
-                <span>ENT-Music</span>
+                <span>ENT- Văn Hoá Cây Bút Xoá</span>
                 <i class="fa-solid fa-ellipsis"></i>
             </div>
             <div class="box-img">
@@ -24,7 +24,7 @@
             </div>
             <div class="name-music">
                 <div class="name">Khuất lối</div>
-                <div class="artist">ENT-Music</div>
+                <div class="artist">ENT- Văn Hoá Cây Bút Xoá</div>
             </div>
             <div class="progress">
                 <div class="progress-bar"></div>
